@@ -2,7 +2,11 @@ package org.jsoup.integration;
 
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
+import org.jsoup.parser.HtmlParserTest;
 import org.junit.jupiter.api.Test;
+
+import java.io.File;
+import java.io.IOException;
 
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -12,11 +16,16 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
  */
 public class FuzzFixesTest {
 
-    @Test
-    public void blankAbsAttr() {
+    @Test public void blankAbsAttr() {
         // https://github.com/jhy/jsoup/issues/1541
         String html = "b<bodY abs: abs:abs: abs:abs:abs>";
         Document doc = Jsoup.parse(html);
+        assertNotNull(doc);
+    }
+
+    @Test public void resetInsertionMode() throws IOException {
+        File in = ParseTest.getFile("/fuzztests/1538.html"); // lots of escape chars etc.
+        Document doc = Jsoup.parse(in, "UTF-8");
         assertNotNull(doc);
     }
 }
